force-app/main/default/objects/Commercial_Reference__c/Commercial_Reference__c.object-meta.xml
<CustomObject>
    <description>Effective-dated SOW, PO and internal authorization controls for an engagement.</description>
    <label>Commercial Reference</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Commercial Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial References</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>