force-app/main/default/objects/Commercial_Reference__c/fields/Approval_Status__c.field-meta.xml
<CustomField><fullName>Approval_Status__c</fullName><label>Approval Status</label><required>true</required><trackHistory>true</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
<value><fullName>Draft</fullName><default>false</default><label>Draft</label></value><value><fullName>Pending Approval</fullName><default>false</default><label>Pending Approval</label></value><value><fullName>Approved</fullName><default>true</default><label>Approved</label></value><value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
</valueSetDefinition></valueSet></CustomField>