force-app/main/default/objects/Commercial_Reference__c/fields/Change_Reason__c.field-meta.xml
<CustomField><fullName>Change_Reason__c</fullName><label>Change Reason</label><length>32000</length><visibleLines>4</visibleLines><type>LongTextArea</type></CustomField>