force-app/main/default/objects/Commercial_Reference__c/fields/Change_Type__c.field-meta.xml
<CustomField><fullName>Change_Type__c</fullName><label>Change Type</label><required>true</required><trackHistory>true</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
<value><fullName>Initial</fullName><default>true</default><label>Initial</label></value><value><fullName>Amendment</fullName><default>false</default><label>Amendment</label></value><value><fullName>Change Order</fullName><default>false</default><label>Change Order</label></value><value><fullName>Renewal</fullName><default>false</default><label>Renewal</label></value>
</valueSetDefinition></valueSet></CustomField>