force-app/main/default/objects/Commercial_Reference__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Commercial References</relationshipLabel>
    <relationshipName>Commercial_References</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>