force-app/main/default/objects/Commercial_Reference__c/fields/Parent_Reference__c.field-meta.xml
<CustomField><fullName>Parent_Reference__c</fullName><label>Parent Commercial Reference</label><referenceTo>Commercial_Reference__c</referenceTo><relationshipLabel>Successor References</relationshipLabel><relationshipName>Successor_References</relationshipName><type>Lookup</type></CustomField>