force-app/main/default/objects/Commercial_Reference__c/fields/Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>Reference_Type__c</fullName>
    <label>Reference Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOW</fullName>
                <default>true</default>
                <label>SOW</label>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>Internal Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>