force-app/main/default/objects/Commercial_Reference__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Commercial Signature</label>
    <length>128</length>
    <type>Text</type>
</CustomField>