force-app/main/default/objects/Commercial_Reference__c/fields/Source_Last_Sync__c.field-meta.xml
<CustomField><fullName>Source_Last_Sync__c</fullName><label>Source Last Sync</label><type>DateTime</type></CustomField>