force-app/main/default/objects/Commercial_Reference__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <label>Valid To</label>
    <required>true</required>
    <type>Date</type>
</CustomField>