force-app/main/default/objects/Commercial_Reference__c/fields/Version__c.field-meta.xml
<CustomField><fullName>Version__c</fullName><defaultValue>1</defaultValue><label>Version</label><precision>6</precision><scale>0</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>