force-app/main/default/objects/Commercial_Reference__c/validationRules/Commercial_Date_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Commercial_Date_Order</fullName>
    <active>true</active>
    <errorConditionFormula>Valid_To__c &lt; Valid_From__c</errorConditionFormula>
    <errorMessage>Valid To cannot precede Valid From.</errorMessage>
</ValidationRule>